2001-12-09  Richard Henderson  <rth@redhat.com>

	* cfgcleanup.c (label_is_jump_target_p): New function.
	(try_optimize_cfg): Use label_is_jump_target_p to check if label is
	target of a JUMP_INSN from the preceding block.

Sun Dec  9 18:40:07 2001  Douglas B. Rupp  <rupp@gnat.com>

	* vmsdbgout.c (lookup_filename): Assign null string instead
	of null pointer to fnam.

2001-12-09  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_align_insns): Suppress realignment
	immediately after a call; insert nops before a call.

2001-12-09  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_align_insns): Use align_functions,
	not FUNCTION_BOUNDARY.
	* config/alpha/alpha.h (TRAMPOLINE_ALIGNMENT): New.
	* config/alpha/alpha32.h, config/alpha/vms.h: Likewise.
	* config/alpha/unicosmk.h (FUNCTION_BOUNDARY): Remove.

2001-12-09  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/mmix/mmix.c (mmix_function_block_profiler,
	mmix_block_profiler, mmix_function_block_profiler_exit): Delete
	unused functions.
	* config/mmix/mmix-protos.h (mmix_function_block_profiler,
	mmix_block_profiler, mmix_function_block_profiler_exit): Delete
	prototypes.

	* config/cris/cris.h (FUNCTION_BLOCK_PROFILER, BLOCK_PROFILER):
	Delete obsoleted macros.

2001-12-09  Joseph S. Myers  <jsm28@cam.ac.uk>

	* doc/cpp.texi, doc/cppinternals.texi, doc/invoke.texi,
	doc/md.texi, doc/rtl.texi, doc/tm.texi: Use American spelling.

	* ChangeLog.2, ChangeLog.3, ChangeLog.5, ChangeLog, alias.c,
	cfgbuild.c, expmed.c, expr.c, final.c, flow.c, fold-const.c,
	function.c, config/alpha/alpha.md, config/alpha/vms-ld.c,
	config/arm/arm.c, config/arm/arm.h, config/c4x/libgcc.S,
	config/i370/i370.c, config/i386/i386.c,
	config/i386/i386-interix.h, config/i386/i386.md,
	config/i386/i386.h, config/i386/netbsd-elf.h, config/ia64/ia64.c,
	config/m32r/m32r-protos.h, config/mcore/mcore.h,
	config/rs6000/rs6000.h, config/sparc/linux64.h,
	config/sparc/sparc.c, config/v850/v850-protos.h,