@@ -1,3 +1,8 @@
+Sun Dec  9 20:19:32 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+			  Douglas B. Rupp  <rupp@gnat.com>
+
+	* tree.c (append_random_char): Conditionalize INO for VMS.
+
 2001-12-09  Richard Henderson  <rth@redhat.com>
 
 	* cfgcleanup.c (label_is_jump_target_p): New function.
